--- a/app/tpls/home/main/component/componentManage.html
+++ b/app/tpls/home/main/component/componentManage.html
@@ -4,7 +4,7 @@
     <div class="projectBodyTitle">
         组件管理
         <div class="floatright btn_add" ng-click="open('createCompenent','lg')">
-            <span class="cicleicon"><i class="iconfont icon-add"></i></span> 新建组件
+            <span class="cicleicon"><i class="iconfont icon-add"></i></span> 新增组件
         </div>
     </div>
     <div class="projectBodyContent" style="top: 56px;">
@@ -15,7 +15,7 @@
                     <i class="iconfont icon-bianji"></i>编辑
                 </span> 
                 <span class="chatIconButton">
-                    <i class="iconfont icon-import"></i>下载脚本
+                    <i class="iconfont icon-download"></i>下载脚本
                 </span>                
                 <span class="chatIconButton">
                     <i class="iconfont icon-empty_fill"></i>删除
