--- a/app/css/common.css
+++ b/app/css/common.css
@@ -182,7 +182,9 @@ a.f_red:hover {
 .marginl_120 {
 	margin-left: 120px;
 }
-
+.marginr_10 {
+	margin-right: 10px;
+}
 .margint_20 {
 	margin-top: 20px;
 }
@@ -708,7 +710,55 @@ a.f_red:hover {
 	opacity: 1;
 	filter: alpha(opacity=100);
 }
-
+/*自定义开关*/
+.switchBox{
+	line-height: 28px;
+	height: 28px;
+	border: 1px solid #ddd;
+	position: relative;
+	width: 80px;
+	border-radius: 3px;
+	overflow: hidden;
+	background: #eee;
+}
+.switchBox input[type=checkbox]{
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 3;
+	cursor: pointer;
+	opacity: 0;
+	filter: alpha(opacity=0);
+}
+.switchBox input:checked+ .switchbtn{
+	left: 50%;
+	right: 0px;	
+}
+.switchBox .switchbg{
+	position: absolute;
+	left: 0px;
+	right: 50%;
+	height: 100%;
+	background: #008bff;
+	z-index: 1;
+}
+.switchBox .switchbtn{
+	position: absolute;
+	left: 0px;
+	right: 50%;
+	height: 100%;
+	background: #fff;
+	text-align: center;
+	line-height: 26px;
+	color: #000;
+	border-right: 1px solid #ddd;
+	z-index: 2;
+}
 .input-helper:before,
 .input-helper:after {
 	-webkit-transition: all;
@@ -954,16 +1004,68 @@ a.f_red:hover {
 	border: none;
 }
 
-.datetimePicker .dropdown-menu>li table .text-info {
+/* .datetimePicker .dropdown-menu>li table .text-info {
 	color: #fff;
-}
+} */
 
 .datetimePicker .dropdown-menu>li .btn-group .btn-info {
 	background: #008bff;
 	margin-right: 5px;
 }
+.datetimePicker .dropdown-menu>li table .btn-info.active .text-info{
+	color: #fff;
+}
+/* 时间选择器 */
+.defaultTimepicker .timeselect{
+	height: 28px;
+	border: 1px solid #ddd;
+	padding-right: 20px;
+	position: relative;
+}
+.defaultTimepicker .timeselect input{
+	outline: none;
+	float: left;
+	line-height: 26px;
+	padding: 0px 0px 0px 10px;
+	width: 32px;
 
+}
+.defaultTimepicker .timeselect .timebtn{
+	position: absolute;
+	width: 20px;
+	height: 14px;
+	right: 0px;
+	text-align: center;
+	cursor: pointer;
+	background: #fff;
+}
+.defaultTimepicker .timeselect .timebtn:hover{
+	background: #eee;
+}
+.defaultTimepicker .timeselect .timebtn.upbtn{
+	top: 0px;
+}
 
+.defaultTimepicker .timeselect .timebtn.downbtn{
+	bottom: 0px;
+}
+.defaultTimepicker .timeselect .timebtn .glyphicon{
+	position: relative;
+	text-align: center;
+	color: rgba(0,0,0,0.3);
+	font-size: 11px;
+	top: 0px;
+
+}
+.defaultTimepicker .timeselect .timebtn.upbtn .glyphicon{
+	top: -2px;
+}
+.defaultTimepicker .timeicon{
+	line-height: 28px;
+	margin: 0px 5px;
+	font-weight: bold;
+	color: #000;
+}
 /*提示弹出*/
 
 [data-tip] {
