--- a/app/tpls/home/main/component/componentManage.html
+++ b/app/tpls/home/main/component/componentManage.html
@@ -10,17 +10,14 @@
     <div class="projectBodyContent" style="top: 56px;">
         <div class="useCaseList" style="bottom: 0px; overflow: auto;" ng-style="useCaseListStyle">
             <div class="useCaseListfunction">
-                <span class="floatleft selectNum">已选中2项：</span>
-                 <span class="chatIconButton" ng-click="open('updateScript','lg')">
-                    <i class="iconfont icon-bianji"></i>编辑
-                </span> 
+                <span class="floatleft selectNum">已选中2项：</span>                
                 <span class="chatIconButton">
                     <i class="iconfont icon-download"></i>下载脚本
                 </span>                
                 <span class="chatIconButton">
                     <i class="iconfont icon-empty_fill"></i>删除
                 </span>
-                 <span class="chatIconButton" ng-click="open('importComponent')">
+                 <span class="chatIconButton" ng-click="open('importComponent','lg')">
                     <i class="iconfont icon-import"></i>导入组件
                 </span>
                 <div class="floatright searchBox">
