--- a/app/css/index.css
+++ b/app/css/index.css
@@ -379,6 +379,7 @@
     top: 45px;
     bottom: 0px;
     padding-left: 10px;
+    box-sizing:border-box;
 }
 
 .treeBody .treeToggle {
@@ -516,6 +517,7 @@
     border-radius: 3px;
     text-align: center;
     font-size: 14px;
+    cursor: pointer;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
 }
 
