--- a/app/css/common.css
+++ b/app/css/common.css
@@ -1208,7 +1208,10 @@ a.f_red:hover {
 	color: #6e6e6e;
 	border-bottom: 1px solid #e1e6eb;
 }
-
+.table-fullborder>tbody>tr>td input[type=text]{
+	height: 40px;
+	line-height: 40px;
+}
 /*重置表格大小*/
 
 .table-resize {
